@@ -24,6 +24,7 @@
 * Added a tick, untick, and click method to check boxes so that
   checkboxes can be "clicked"
 * Options on Select lists can now be "tick"ed, and "untick"ed.
+* Added inspect methods and pretty printing
 
 == 0.5.2
 
